Se customizo la factura

--- a/app/locale/de_DE/FireGento_Pdf.csv
+++ b/app/locale/de_DE/FireGento_Pdf.csv
@@ -23,9 +23,9 @@
 "Register number:","HRB Nummer:"
 "CEO:","Geschäftsführer:"
 "Pos","Pos."
-"No.","Artikelnummer"
+"Cod.","Artikelnummer"
 "Description","Beschreibung"
-"Price (excl. tax)","Preis (Netto)"
+"Price (excl. tax)","Precio (Netto)"
 "Amount","Betrag"
 "Tax","USt."
 "Total","Summe"
@@ -36,8 +36,8 @@
 "Shipment number:","Lieferscheinnummer:"
 "Creditmemo number:","Gutschriftsnummer:"
 "Customer number:","Kundennummer:"
-"Customer IP:","Kunden IP:"
-"Invoice date:","Rechnungsdatum:"
+"IP Cliente:","Kunden IP:"
+"Fecha de Factura:","Rechnungsdatum:"
 "Shipping date:","Versanddatum:"
 "Date:","Datum:"
 "Additional tax %s","Zusätzliche Steuern %s"
@@ -73,7 +73,7 @@
 "Show Item Discount","Rabatt auf Artikelebene anzeigen"
 "You get a discount of %s.","Sie erhalten einen Rabatt von %s."
 "Tax amount","Steuerbetrag"
-"Price (incl. tax)","Preis (Brutto)"
+"Price (incl. tax)","Precio (Bruto)"
 "Subtotal (incl. tax)","Zwischensumme (Brutto)"
 "Order of price columns of items","Reihenfolge der Spalten in der Artikelliste"
 "Define the order by moving the following items using your mouse:","Legen Sie die Reihenfolge durch Verschieben der Einträge mit der Maus fest:"
