--- a/app/locale/es_ES/Mage_XmlConnect.csv
+++ b/app/locale/es_ES/Mage_XmlConnect.csv
@@ -761,7 +761,7 @@
 "Prefix","Prefijo"
 "Preset Theme","Aktuelles Theme"
 "Preview","Vista previa"
-"Price","Preis"
+"Price","Precio"
 "Price Font Color","Color de fuente del precio"
 "Price excluding tax","Price excluding tax"
 "Price including tax","Price including tax"
